# mailfeed

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  EMAIL_DELIVERY_DESIGN.md  README.md
deployment/: README.md  install.sh
deployment/cron/: mailfeed-cron
deployment/scripts/: backup.sh  maintenance.sh  monitor.sh  update.sh
deployment/systemd/: mailfeed.service
mailfeed/: .env.dist  .env.example  .gitignore  .sample.env  Cargo.toml  diesel.toml
mailfeed-ui/: .env.example  package-lock.json  package.json  svelte.config.js  tailwind.config.cjs
mailfeed-ui/src/: app.html  app.postcss  stores.ts
mailfeed-ui/src/api/: index.ts
mailfeed-ui/src/lib/: config.ts
mailfeed-ui/src/routes/: +layout.svelte  +page.svelte  login.svelte
mailfeed-ui/src/routes/config/: +page.svelte
mailfeed-ui/src/routes/settings/: +page.svelte
mailfeed/src/: api.rs  claims.rs  email_sender.rs  feed_monitor.rs  global.rs  main.rs  models.rs  routes.rs  schema.rs  tasks.rs  test_helpers.rs  types.rs
mailfeed/src/api/: auth.rs  routes.rs
mailfeed/src/api/auth/: handlers.rs  jwt.rs  routes.rs  types.rs
mailfeed/src/api/config/: handlers.rs  routes.rs  types.rs
mailfeed/src/api/feed_items/: handlers.rs  routes.rs
mailfeed/src/api/feeds/: handlers.rs  routes.rs  types.rs
mailfeed/src/api/subscriptions/: handlers.rs  routes.rs  types.rs
mailfeed/src/api/users/: handlers.rs  routes.rs  types.rs
mailfeed/src/db/migrations/2023-05-23-032950_create_users/: up.sql
mailfeed/src/db/migrations/2023-05-23-040545_create_feed_items/: down.sql  up.sql
mailfeed/src/db/migrations/2023-05-23-231244_create_subscriptions/: up.sql
mailfeed/src/feed_monitor/: orchestrator.rs
mailfeed/src/handlers/: auth.rs  feed.rs  mod.rs  subscription.rs  user.rs
mailfeed/src/migrations/2023-05-23-032950_create_users/: up.sql
mailfeed/src/migrations/2023-05-23-040545_create_feed_items/: up.sql
mailfeed/src/migrations/2023-05-23-230921_create_feeds/: up.sql
mailfeed/src/migrations/2023-05-26-023943_create_settings/: up.sql
mailfeed/src/migrations/2025-07-25-174559_replace_email_with_telegram/: down.sql
mailfeed/src/models/: feed.rs  feed_item.rs  models.rs  settings.rs  subscription.rs  user.rs
mailfeed/src/tasks/: email_sender.rs  telegram_sender.rs  types.rs
mailfeed/src/tasks/email_sender/: runner.rs  types.rs
mailfeed/src/tasks/feed_monitor/: runner.rs  types.rs
mailfeed/src/telegram/: client.rs  types.rs
public/: index.html
src/: api.rs  errors.rs  global.rs  lib.rs  main.rs  models.rs  observability.rs  schema.rs  security.rs  session.rs  tasks.rs  telegram_client.rs  test_helpers.rs  types.rs  web_ui.rs
src/api/: auth.rs  feed_items.rs  health.rs  routes.rs  subscriptions.rs  users.rs
src/api/auth/: handlers.rs  routes.rs  types.rs
src/api/config/: handlers.rs  mod.rs  routes.rs  types.rs
src/api/email/: handlers.rs  mod.rs  routes.rs  types.rs
src/api/feed_items/: handlers.rs
src/api/feeds/: handlers.rs  routes.rs
src/api/subscriptions/: handlers.rs  routes.rs
src/api/users/: handlers.rs  types.rs
src/migrations/2023-05-23-230921_create_feeds/: up.sql
src/migrations/2023-05-23-231244_create_subscriptions/: up.sql
src/migrations/2025-07-25-174559_replace_email_with_telegram/: up.sql
src/migrations/2025-07-26-014554_create_sessions/: up.sql
src/migrations/2025-07-27-165655_add_email_delivery/: down.sql  up.sql
src/models/: email_config.rs  feed.rs  feed_item.rs  session.rs  settings.rs  subscription.rs  user.rs
src/security/: encryption.rs
src/tasks/: email_sender.rs  types.rs
src/tasks/email_sender/: delivery.rs  runner.rs  types.rs
src/tasks/feed_monitor/: runner.rs
src/tasks/telegram_sender/: runner.rs  types.rs
src/telegram/: client.rs  types.rs
templates/: base.html  config.html  dashboard.html  login.html  settings.html  subscription_edit.html  subscription_item.html
tests/: auth_tests.rs  e2e_tests.rs  e2e_tests_simple.rs  integration_tests.rs
ui/: package-lock.json  vite.config.ts
ui/src/: stores.ts
ui/src/api/: index.ts
ui/src/lib/: config.ts
ui/src/lib/components/: ConfirmDialog.svelte  ErrorBoundary.svelte  LoadingSpinner.svelte  SkeletonCard.svelte  Toast.svelte
ui/src/routes/: +layout.svelte  +page.svelte  login.svelte
ui/src/routes/config/: +page.svelte
ui/src/routes/settings/: +page.svelte  +page.ts
