[package]
name = "mailfeed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.5"
actix-files = "0.6.6"
actix-governor = "0.4.1"
actix-rt = "2.10.0"
actix-web = "4.11.0"
actix-web-httpauth = "0.8.2"
argon2 = "0.5.3"
base64 = "0.21.7"
chrono = "0.4.41"
clap = { version = "4.5.41", features = ["derive"] }
derive_more = "0.99.20"
diesel = { version = "2.2.12", features = [
  "sqlite",
  "extras",
  "returning_clauses_for_sqlite_3_35",
] }
diesel_migrations = "2.2.0"
dotenvy = "0.15.7"
env_logger = "0.10.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json", "env-filter"] }
tracing-actix-web = "0.7.19"
feed-rs = "1.5.3"
futures-util = "0.3.31"
html-escape = "0.2.13"
teloxide = { version = "0.12", default-features = false, features = ["macros", "rustls"] }
jsonwebtoken = "8.3.0"
log = "0.4.27"
once_cell = "1.21.3"
rand = "0.8.5"
regex = "1.11.1"
reqwest = { version = "0.11.27", features = ["json"] }
rpassword = "7.4.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
thiserror = "1.0.69"
tokio = "1.46.1"
url = "2.5.4"
uuid = { version = "1.17", features = ["v4", "serde"] }

[dev-dependencies]
ctor = "0.2.9"
