[package]
name = "mailfeed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4.3.1"
argon2 = "0.5.0"
chrono = "0.4.24"
diesel = { version = "2.0.4", features = ["sqlite", "extras"] }
diesel_migrations = "2.0.0"
dotenvy = "0.15.7"
env_logger = "0.10.0"
log = "0.4.17"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
