[package]
name = "mailfeed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-rt = "2.8.0"
actix-web = "4.3.1"
actix-web-httpauth = "0.8.0"
argon2 = "0.5.0"
base64 = "0.21.2"
chrono = "0.4.24"
clap = { version = "4.3.0", features = ["derive"] }
derive_more = "0.99.17"
diesel = { version = "2.0.4", features = [
  "sqlite",
  "extras",
  "returning_clauses_for_sqlite_3_35",
] }
diesel_migrations = "2.0.0"
dotenvy = "0.15.7"
env_logger = "0.10.0"
feed-rs = "1.3.0"
jsonwebtoken = "8.3.0"
log = "0.4.17"
once_cell = "1.17.1"
rand = "0.8.5"
reqwest = "0.11.18"
rpassword = "7.2.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
tokio = "1.28.2"
url = "2.3.1"

[dev-dependencies]
ctor = "0.2.0"
